# cryptoBridger

./: .continueignore  .gitignore  .mocharc.json  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
apps/web/: next.config.ts  package-lock.json  package.json  post-eur.mjs  post-prices.mjs  tsconfig.json
apps/web/src/app/: cardbridger.tsx  globals.css  lamyt.tsx  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: CardBalance.tsx  ChromeToPhantomRedirect.tsx  ErudaLoader.tsx  HealthFactorMeter.tsx  NFCRingAnimation.tsx  NFCTapButton.tsx  WalletConnect.tsx
apps/web/src/hooks/: useAnchorProvider.ts  useCardBalance.ts  useCardState.ts  useEffectiveWallet.ts  useHealthFactor.ts  useNFCTap.ts  usePhantomMobile.ts  useSolPrice.ts
apps/web/src/idl/: lending_vault.json  nfc_authorization.json
apps/web/src/lib/: anchor-client.ts  api-client.ts  jupiter.ts  solana.ts  (+1 more)
backend/: Cargo.toml  package.json
backend/src/: main.rs
backend/src/handlers/: auth.rs  card.rs  health.rs  mod.rs  nfc.rs  swipe.rs
backend/src/solana/: client.rs  jupiter_quote.rs  mod.rs  vault_ix.rs
backend/src/state/: memory_store.rs  mod.rs
backend/src/utils/: mod.rs  nfc_nonce.rs
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/app/: index.tsx
mobile/src/components/: CardBalance.tsx  NFCRingAnimation.tsx
programs/lending_vault/: .env.example  Anchor.toml  Cargo.toml  tsconfig.json
programs/lending_vault/src/: error.rs  lib.rs
programs/lending_vault/src/instructions/: borrow.rs  deposit.rs  initialize.rs  liquidate.rs  mod.rs  repay.rs  withdraw.rs
programs/lending_vault/src/state/: mod.rs  user_position.rs  vault.rs
programs/lending_vault/tests/: initialize.ts
programs/nfc_authorization/: Cargo.toml
programs/nfc_authorization/src/: error.rs  lib.rs
scripts/: init-vault.ts  init.ts
(+30 files in other folders)
