[package]
name = "lending_vault"
version = "0.1.0"
description = "Yield-bearing vault for CryptoCardBridge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_vault"

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

# Pyth Oracle (recommended modern way)
pyth-solana-receiver-sdk = "1.1.0"
pythnet-sdk = "2.1"

# For safe math and token handling
spl-token = "6.0"
solana-program = "2.3.0"

[dev-dependencies]
anchor-client = "0.32.1"

[profile.release]
overflow-checks = true
