[package]
name = "lending_vault"
version = "0.1.0"
description = "Yield-bearing vault for CryptoCardBridge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_vault"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
pyth-solana-receiver-sdk = "1.1.0"

# For safe math and token handling
spl-token = { version = "6.0", features = ["no-entrypoint"] }


[profile.release]
overflow-checks = true
